fixed vertical alignment in logo, add egg, add section on transform your brand

--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 *{
-    height: 100%;
-    width: 100%;
     margin: 0;
     padding: 0;
     outline: solid rgb(0 255 0/1)
-
+    
 }
+
+
 .header{
     background: url(./images/mobile/image-header.jpg) center/cover;
+    height: 700px;
 }
 .header__logoAndNav{
     display: flex;
@@ -20,7 +21,7 @@
 }
 
 .header__logo{
-    height: 20px;
+    
     width: 40px;
     margin-left: 10px;;
     font-weight: 900;
@@ -42,7 +43,10 @@
     line-break: auto;
     font-size: 1.8em;
     top: 24%;
+    width: 300px;
+    margin: 0 auto;
     text-align: center;
+    letter-spacing: .2em;
 }
 
 .header__direction::after{
@@ -51,7 +55,35 @@
     height: 200px;
     position: absolute;
     margin-left: -10px;
-    top:180px;
+    top:165px;
+}
 
-    
+/* main */
+
+.main__egg{
+    background: url(./images/mobile/image-transform.jpg) center/cover;
+    height: 400px;
+}
+
+.main__transformYourBrand{
+    margin: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.transformYourBrand__heading{
+    font-size: 1.3em;
+    font-weight: bolder;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.transformYourBrand__text{
+    font-size: 1.1em;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.transformYourBrand__link{
+    text-decoration: none;
 }
